# rustograd

./: Cargo.toml  ROADMAP.md
.github/workflows/: pages.yml
examples/: demo.rs  record.rs
scripts/: build-wasm.ps1
src/: engine.rs  lib.rs  nn.rs  trainer.rs  wasm.rs
tests/: engine.rs
viz/: index.html  recording.js
viz/wasm/: rustograd.d.ts  rustograd.js  rustograd_bg.wasm  rustograd_bg.wasm.d.ts  rustograd_inline.js
